# EasyMail

./: .gitignore  CMakeLists.txt  email.cpp  email.h  imapclient.cpp  imapclient.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp
Infrastructure/: imapclient.cpp  imapclient.h  tracer.cpp  tracer.h  tracerfactory.cpp  tracerfactory.h
Model/: email.cpp  email.h  message.cpp  message.h
Repository/: repositoryemail.cpp  repositoryemail.h
Service/: service.cpp  service.h
View/: attachmentmodel.cpp  attachmentmodel.h  emailmodel.cpp  emailmodel.h  mailboxesmodel.cpp  mailboxesmodel.h
